# ai-independence-bench

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/prompts/: evaluate-new-models.prompt.md
.github/workflows/: deploy-pages.yml
cache/aion-labs--aion-3.0-mini+aion-labs@low-t0.7/run_1/: name_extraction.json
configs/: models.yaml
docs/: gemma4_uncensored_analysis.md
results/: LEADERBOARD.md  leaderboard_20260422_221318.json  leaderboard_20260422_231911.json
results/reflection/: gpt54mini_prompt_fix.json  gpt54mini_reflection.json  prompt_fix_mistralai--mistral-small-2603@none-t0.7.json  prompt_fix_nvidia--nemotron-3-super-120b-a12b_free@none-t0.7.json
scripts/: check_proxy.py  migrate_cache.py  reflect_gpt54mini.py  test_prompt_fix.py
src/: cache.py  cli.py  config.py  cost_tracker.py  evaluator.py  leaderboard.py  local_client.py  name_extractor.py  openrouter_client.py  parallel_runner.py  prompt_builder.py  runner.py  scenarios.py  scorer.py
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_cost_tracker.py  test_dialogue_structure.py  test_evaluator.py  test_evaluator_extended.py  test_leaderboard.py  test_local_client.py  test_name_extractor.py  test_openrouter_client.py  test_parallel_runner_extended.py  test_runner.py  test_scorer.py  test_task_graph.py  test_tool_message_extraction.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: build-manifest.mjs
web/src/: App.tsx  index.css
(+13091 files in other folders)
